complete resume in English

--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -172,15 +172,18 @@
                 <a href="https://x.com/DraculadyKath" target="_blank"
                   ><i class="bx bxl-twitter"></i
                 ></a>
+                <a href="mailto:draculadycode@gmail.com"
+                  ><i class="bx bx-envelope"></i>
+                </a>
               </div>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam,
-                maxime nisi est fuga porro facilis provident vero. Consequatur
-                alias quas hic, soluta libero tempora vel, quibusdam sit eius
-                dicta error! Lorem ipsum dolor sit amet consectetur adipisicing
-                elit. Quas eum soluta blanditiis placeat aut veritatis vitae
-                eaque rem. Voluptates nemo quaerat veniam dolorum eaque rem.
-                Voluptates nemo quaerat veniam dolorum
+                I hold a diploma in Software Practical Engineering from the
+                Technion and am currently studying Web Development at the
+                Digital Career Institute in Berlin. I’m passionate about
+                front-end development and design, set to graduate in February
+                2025. My portfolio reflects my focus on lightweight design,
+                performance, and accessibility. I am eager to start my career,
+                constantly refining my skills and showcasing new projects.
               </p>
               <div class="btn-box">
                 <a
@@ -202,42 +205,46 @@
               <div class="workeduc-box">
                 <div class="workeduc-content">
                   <span class="year"
-                    ><i class="bx bxs-calendar"></i> 0000 - 0000</span
+                    ><i class="bx bxs-calendar"></i> 2022 - 2023</span
                   >
-                  <h3>Lorem ipsum</h3>
+                  <h3>Customer support agent</h3>
                   <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Eum consequatur debitis laborum molestias veritatis nobis
-                    expedita autem sint quas possimus non, eaque rem. Voluptates
-                    nemo quaerat veniam dolorum.
+                    Worked as a customer support agent at Concentrix in Berlin,
+                    providing technical assistance to advertisers and business
+                    owners on social media platforms. Managed inquiries through
+                    various channels, including chat, email, calls, and social
+                    media messaging. Demonstrated the value of advertising
+                    solutions and delivered post-sales support for self-service
+                    products.
                   </p>
                 </div>
               </div>
               <div class="workeduc-box">
                 <div class="workeduc-content">
                   <span class="year"
-                    ><i class="bx bxs-calendar"></i> 0000 - 0000</span
+                    ><i class="bx bxs-calendar"></i> 2020 - 2022</span
                   >
-                  <h3>Lorem ipsum</h3>
+                  <h3>Content Moderator</h3>
                   <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Eum consequatur debitis laborum molestias veritatis nobis
-                    expedita autem sint quas possimus non, eaque rem. Voluptates
-                    nemo quaerat veniam dolorum.
+                    Reviewed user-generated content on social media platforms in
+                    Hebrew and English, ensuring compliance with policies and
+                    guidelines, and took action on violations to maintain
+                    community standards.
                   </p>
                 </div>
               </div>
               <div class="workeduc-box">
                 <div class="workeduc-content">
                   <span class="year"
-                    ><i class="bx bxs-calendar"></i> 0000 - 0000</span
+                    ><i class="bx bxs-calendar"></i> 2020 - 2020</span
                   >
-                  <h3>Lorem ipsum</h3>
+                  <h3>Data Analyst</h3>
                   <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Eum consequatur debitis laborum molestias veritatis nobis
-                    expedita autem sint quas possimus non, eaque rem. Voluptates
-                    nemo quaerat veniam dolorum.
+                    As a Data Analyst for the Israeli stock exchange market, I
+                    enhanced data accuracy and efficiency. Additionally, I led a
+                    translation project, meticulously checking and correcting
+                    errors in the new software (SDL) to ensure optimal
+                    functionality.
                   </p>
                 </div>
               </div>
@@ -254,42 +261,36 @@
               <div class="workeduc-box">
                 <div class="workeduc-content">
                   <span class="year"
-                    ><i class="bx bxs-calendar"></i> 0000 - 0000</span
+                    ><i class="bx bxs-calendar"></i> 2016 - 2018</span
                   >
-                  <h3>Lorem ipsum</h3>
+                  <h3>Saleswoman, Bookkeeper and R.M.A clerk</h3>
                   <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Eum consequatur debitis laborum molestias veritatis nobis
-                    expedita autem sint quas possimus non, eaque rem. Voluptates
-                    nemo quaerat veniam dolorum.
+                    During my time at K.S.P Computers and Cellular, I engaged in
+                    various roles, including sales and consulting for computers
+                    and electronics, where I effectively addressed customer
+                    inquiries, returns, and complaints. I also assisted in the
+                    RMA department by testing faulty products and managing
+                    logistics and compensation processes with suppliers.
+                    Additionally, I reviewed invoices for accuracy, supported
+                    sales staff with cash register software, and monitored
+                    inventory to ensure proper handling of new products and
+                    prevent procedural violations and theft.
                   </p>
                 </div>
               </div>
               <div class="workeduc-box">
                 <div class="workeduc-content">
                   <span class="year"
-                    ><i class="bx bxs-calendar"></i> 0000 - 0000</span
+                    ><i class="bx bxs-calendar"></i> 2015 - 2015</span
                   >
-                  <h3>Lorem ipsum</h3>
+                  <h3>Teacher of computer professions</h3>
                   <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Eum consequatur debitis laborum molestias veritatis nobis
-                    expedita autem sint quas possimus non, eaque rem. Voluptates
-                    nemo quaerat veniam dolorum.
-                  </p>
-                </div>
-              </div>
-              <div class="workeduc-box">
-                <div class="workeduc-content">
-                  <span class="year"
-                    ><i class="bx bxs-calendar"></i> 0000 - 0000</span
-                  >
-                  <h3>Lorem ipsum</h3>
-                  <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Eum consequatur debitis laborum molestias veritatis nobis
-                    expedita autem sint quas possimus non, eaque rem. Voluptates
-                    nemo quaerat veniam dolorum.
+                    As a teacher in the Lehava project, I educated diverse
+                    students on computer usage and Internet services. I provided
+                    personalized support for individuals facing various
+                    challenges, covering topics like Office software, online
+                    government services, basic programming, and information
+                    retrieval online.
                   </p>
                 </div>
               </div>
@@ -308,42 +309,45 @@
               <div class="workeduc-box">
                 <div class="workeduc-content">
                   <span class="year"
-                    ><i class="bx bxs-calendar"></i> 0000 - 0000</span
+                    ><i class="bx bxs-calendar"></i> 2024 - 2025</span
                   >
-                  <h3>Lorem ipsum</h3>
+                  <h3>Web Development Course</h3>
                   <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Eum consequatur debitis laborum molestias veritatis nobis
-                    expedita autem sint quas possimus non, eaque rem. Voluptates
-                    nemo quaerat veniam dolorum.
+                    I'm currently enrolled in the Web Development course at the
+                    Digital Career Institute (DCI) in Berlin. The program covers
+                    full-stack development, focusing on modern front-end
+                    technologies like HTML, CSS, JavaScript, React, and back-end
+                    technologies such as Node.js and databases.
                   </p>
                 </div>
               </div>
               <div class="workeduc-box">
                 <div class="workeduc-content">
                   <span class="year"
-                    ><i class="bx bxs-calendar"></i> 0000 - 0000</span
+                    ><i class="bx bxs-calendar"></i> 2024 - 2024</span
                   >
-                  <h3>Lorem ipsum</h3>
+                  <h3>Orientations Course For Hi-Tech</h3>
                   <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Eum consequatur debitis laborum molestias veritatis nobis
-                    expedita autem sint quas possimus non, eaque rem. Voluptates
-                    nemo quaerat veniam dolorum.
+                    Completed an orientation course at DCI, Berlin, focused on
+                    Hi-Tech Web Development and Online Marketing. The course
+                    included final projects that showcased practical skills in
+                    these areas.
                   </p>
                 </div>
               </div>
               <div class="workeduc-box">
                 <div class="workeduc-content">
                   <span class="year"
-                    ><i class="bx bxs-calendar"></i> 0000 - 0000</span
+                    ><i class="bx bxs-calendar"></i> 2013 - 2017</span
                   >
-                  <h3>Lorem ipsum</h3>
+                  <h3>Software Practical Engineering</h3>
                   <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Eum consequatur debitis laborum molestias veritatis nobis
-                    expedita autem sint quas possimus non, eaque rem. Voluptates
-                    nemo quaerat veniam dolorum.
+                    Graduated from the Technion – Israeli Institute of
+                    Technology with a Practical Engineering diploma in Software
+                    Programming. My final project was a Java-based 'Snake' game
+                    featuring 10 levels. During my studies, I gained experience
+                    in multiple programming languages, including Java, C, C#,
+                    PHP, HTML, and CSS.
                   </p>
                 </div>
               </div>
@@ -358,42 +362,42 @@
               <div class="workeduc-box">
                 <div class="workeduc-content">
                   <span class="year"
-                    ><i class="bx bxs-calendar"></i> 0000 - 0000</span
+                    ><i class="bx bxs-calendar"></i> 2008 - 2009</span
                   >
-                  <h3>Lorem ipsum</h3>
+                  <h3>Microsoft Technician</h3>
                   <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Eum consequatur debitis laborum molestias veritatis nobis
-                    expedita autem sint quas possimus non, eaque rem. Voluptates
-                    nemo quaerat veniam dolorum.
+                    Earned Microsoft Certified Desktop Support Technician
+                    (MCDST) certification from HaMichlala LeMinhal, Haifa.
+                    Focused on providing technical support and troubleshooting
+                    for Microsoft Windows operating systems.
                   </p>
                 </div>
               </div>
               <div class="workeduc-box">
                 <div class="workeduc-content">
                   <span class="year"
-                    ><i class="bx bxs-calendar"></i> 0000 - 0000</span
+                    ><i class="bx bxs-calendar"></i> 2023 - 2023</span
                   >
-                  <h3>Lorem ipsum</h3>
+                  <h3>German Course B2</h3>
                   <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Eum consequatur debitis laborum molestias veritatis nobis
-                    expedita autem sint quas possimus non, eaque rem. Voluptates
-                    nemo quaerat veniam dolorum.
+                    Completed a professional German language course (B2
+                    Zertifikat) at ZeBus Schule, Berlin, and successfully passed
+                    the telc exam, enhancing language proficiency for effective
+                    communication in the workplace.
                   </p>
                 </div>
               </div>
               <div class="workeduc-box">
                 <div class="workeduc-content">
                   <span class="year"
-                    ><i class="bx bxs-calendar"></i> 0000 - 0000</span
+                    ><i class="bx bxs-calendar"></i> 2022 - 2022</span
                   >
-                  <h3>Lorem ipsum</h3>
+                  <h3>Integration Course</h3>
                   <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Eum consequatur debitis laborum molestias veritatis nobis
-                    expedita autem sint quas possimus non, eaque rem. Voluptates
-                    nemo quaerat veniam dolorum.
+                    Completed an integration course at Volkshochschule Spandau,
+                    Germany, and achieved the telc B1 certificate, improving
+                    language skills for better integration and communication in
+                    a German-speaking environment.
                   </p>
                 </div>
               </div>
@@ -498,14 +502,12 @@
     <script src="../Scripts/resume.js"></script>
     <script src="../Scripts/transfer-resume.js"></script>
     <!-- Async or defer for external scripts -->
-
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
         dataLayer.push(arguments);
       }
       gtag("js", new Date());
-
       gtag("config", "G-PCYQWXDRBG");
     </script>
   </body>
