--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -452,22 +452,23 @@
             <div class="page-back">
               <h1 class="title">Contact Me!</h1>
               <div class="contact-box">
-                <form action="https://formspree.io/f/xnnaakea" method="post">
+                <form action="https://formspree.io/f/xyzgryqo" method="POST">
                   <input
                     type="text"
                     class="field"
+                    name="fullName"
                     placeholder="Full Name"
                     required
                   />
                   <input
                     type="email"
                     class="field"
+                    name="email"
                     placeholder="Email Address"
                     required
                   />
                   <textarea
-                    name=""
-                    id=""
+                    name="message"
                     cols="30"
                     rows="10"
                     class="field"
