--- a/Pages/contact-deutsch.html
+++ b/Pages/contact-deutsch.html
@@ -160,7 +160,7 @@
                   <h3>Schick mir eine Nachricht</h3>
                 </div>
                 <div class="form">
-                  <form action="https://formspree.io/f/xnnaakea" method="POST">
+                  <form action="https://formspree.io/f/xyzgryqo" method="POST">
                     <label for="name">Ihr Name:</label> <br />
                     <input type="text" id="name" name="name" required />
                     <br />
