adding dropdown menu and splitting my files page

--- a/Pages/files.html
+++ b/Pages/files.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-page="contact-english">
+<html lang="en" data-page="files-english + german">
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -160,166 +160,81 @@
       </div>
     </header>
     <main>
-      <section id="contact" aria-labelledby="contact-heading">
-        <div class="container">
-          <div class="h2-title">
-            <h2 id="contact-heading">Contact Me</h2>
-          </div>
-          <div class="contact-options-divs">
-            <div class="contact-form">
-              <div class="container">
-                <div class="h3-title">
-                  <h3>Send me a message</h3>
-                </div>
-                <div class="form">
-                  <form action="https://formspree.io/f/xyzgryqo" method="POST">
-                    <label for="name">Your Name:</label> <br />
-                    <input
-                      type="text"
-                      id="name"
-                      name="name"
-                      required
-                      autocomplete="name"
-                    />
-                    <br />
-                    <label for="email">Your Email:</label> <br />
-                    <input
-                      type="email"
-                      id="email"
-                      name="_replyto"
-                      required
-                      autocomplete="email"
-                    />
-                    <br />
-                    <label for="message">Your Message:</label> <br />
-                    <textarea
-                      id="message"
-                      name="message"
-                      required
-                      autocomplete="message"
-                    ></textarea>
-                    <br />
-                    <button type="submit">Send</button>
-                  </form>
-                </div>
-              </div>
+      <section class="download-files">
+        <div class="my-files">
+          <div class="container">
+            <div class="h3-title">
+              <h3>Download my documents</h3>
             </div>
-            <div class="contact-directly">
-              <div class="container">
-                <div class="h3-title">
-                  <h3>Contact me directly</h3>
-                </div>
-                <div class="contact-options">
-                  <ul class="contact-options-list">
-                    <li>
-                      <a
-                        href="mailto: draculady@onmail.com"
-                        aria-label="Email me"
-                        target="_blank"
-                      >
-                        <i
-                          class="fa-regular fa-envelope"
-                          aria-hidden="true"
-                        ></i>
-                        <b title="draculady@onmail.com"> Email</b>
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://www.linkedin.com/in/kathrin-peled-draculady/"
-                        target="_blank"
-                        aria-label="LinkedIn profile"
-                      >
-                        <i class="fa-brands fa-linkedin" aria-hidden="true"></i>
-                        <b
-                          title="https://www.linkedin.com/in/kathrin-peled-draculady/"
-                        >
-                          LinkedIn</b
-                        >
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://github.com/DraculadyCode"
-                        target="_blank"
-                        aria-label="GitHub profile"
-                      >
-                        <i class="fa-brands fa-github" aria-hidden="true"></i>
-                        <b title="https://github.com/DraculadyCode">
-                          GitHub</b
-                        ></a
-                      >
-                    </li>
-                    <li>
-                      <a
-                        href="https://t.me/Draculady"
-                        target="_blank"
-                        rel="Link to Telegram"
-                      >
-                        <i class="fab fa-telegram" aria-hidden="true"></i>
-                        <b title="Telegram">Telegram</b>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="sms:+4917685639174" aria-label="Send SMS">
-                        <i
-                          class="fa-regular fa-comment-alt"
-                          aria-hidden="true"
-                        ></i>
-                        <b title="sms:+4917685639174">SMS</b>
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://www.facebook.com/profile.php?id=61563925780935"
-                        target="_blank"
-                        aria-label="facebook page"
-                      >
-                        <i class="fa-brands fa-facebook" aria-hidden="true"></i>
-                        <b
-                          title="https://www.facebook.com/profile.php?id=61563925780935"
-                        >
-                          Facebook</b
-                        ></a
-                      >
-                    </li>
-                    <li>
-                      <a
-                        href="https://x.com/DraculadyKath"
-                        target="_blank"
-                        aria-label="facebook page"
-                      >
-                        <i class="fa-brands fa-x-twitter"></i>
-                        <b title="https://x.com/DraculadyKath">
-                          Twitter/ X
-                        </b></a
-                      >
-                    </li>
-                  </ul>
-                </div>
-              </div>
+            <div class="files">
+              <ul class="files-list">
+                <li title="Translated to German">
+                  <a
+                    href="../Files/Diplom Übersetzung 2023.pdf"
+                    download
+                    aria-label="Download my diploma"
+                  >
+                    <i class="fa-solid fa-download" aria-hidden="true"></i>
+                    Download My
+                    <strong>Diplom</strong> 🇩🇪
+                  </a>
+                </li>
+                <li title="Extended version of my CV">
+                  <a
+                    href="../Files/Kathrin Peled Resume 07.2024 .pdf"
+                    aria-label="Download my resume CV"
+                    download
+                  >
+                    <i class="fa-solid fa-file" aria-hidden="true"></i>
+
+                    Download My Full <strong>Resume</strong> 🇬🇧
+                  </a>
+                </li>
+                <li title="Resume with relevant experience only">
+                  <a
+                    href="../Files/Kathrin Peled Professional Resume.pdf"
+                    aria-label="Download my professional resume"
+                    download
+                  >
+                    <i class="fa-regular fa-file" aria-hidden="true"></i>
+                    Download My
+                    <strong>Professional Resume</strong> 🇬🇧
+                  </a>
+                </li>
+                <li title="Lebenslauf mit nur relevanter Erfahrung">
+                  <a
+                    href="../Files/Kathrin Peled Lebenslauf - Deutsch.pdf"
+                    download
+                    aria-label="Download my professional CV"
+                  >
+                    <i class="fa-regular fa-file" aria-hidden="true"></i>
+                    Lade meinen
+                    <strong>beruflichen Lebenslauf</strong> herunter 🇩🇪
+                  </a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
       </section>
+
       <div class="backtotop">
         <a href="#" aria-label="Back to top">
           <span class="back-to">Back to</span> top
           <i class="fa-solid fa-up-long" aria-hidden="true"></i>
         </a>
       </div>
-
-      <div class="languages">
-        <a href="./contact-deutsch.html" aria-label="Change Language to German">
-          <p>
-            Sprache <br />
-            änderen
-          </p>
-
-          <img
-            src="../Language Logos/German_Logo.webp"
-            alt="Change Language to German"
-          />
+      <div class="hire-me">
+        <a href="./contact-english.html#contact" aria-label="Hire me">
+          <div class="face">
+            <div class="eyes">
+              <div class="eye"></div>
+              <div class="eye"></div>
+            </div>
+          </div>
+          <div class="hire-me-textbox">
+            <p>Hire me</p>
+          </div>
         </a>
       </div>
     </main>
@@ -331,6 +246,8 @@
         </div>
       </div>
     </footer>
+    <script src="../Scripts/portfolio-sortment.js"></script>
+    <script src="../Scripts/toggle-english.js"></script>
     <script src="../Scripts/script.js"></script>
 
     <!-- Async or defer for external scripts -->
