--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -96,10 +96,24 @@
         <h1 data-text="Kathrin Peled">Kathrin Peled</h1>
         <nav>
           <ul>
-            <li>
-              <a href="../index-german.html#about" aria-label="Über mich">
-                über mich</a
-              >
+            <li class="dropdown">
+              <a href="../index.html#about" aria-label="About">Über mich</a>
+              <ul class="dropdown-portfolio">
+                <li>
+                  <a
+                    href="./resume-english.html"
+                    aria-label="Ineractive Resume Book"
+                    >Mein Lebenslauf</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="./files.html"
+                    aria-label="Download my files and documents"
+                    >Meine Dateien</a
+                  >
+                </li>
+              </ul>
             </li>
             <li class="dropdown">
               <a href="../index-german.html#portfolio" aria-label="Portfolio"
