--- a/index.html
+++ b/index.html
@@ -101,7 +101,25 @@
         <h1 data-text="Kathrin Peled">Kathrin Peled</h1>
         <nav>
           <ul>
-            <li><a href="index.html#about" aria-label="About">About</a></li>
+            <li class="dropdown">
+              <a href="../index.html#about" aria-label="About">About</a>
+              <ul class="dropdown-portfolio">
+                <li>
+                  <a
+                    href="./Pages/resume-english.html"
+                    aria-label="Ineractive Resume Book"
+                    >My Resume</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="./Pages/files.html"
+                    aria-label="Download my files and documents"
+                    >Download My Files</a
+                  >
+                </li>
+              </ul>
+            </li>
             <li class="dropdown">
               <a href="index.html#portfolio" aria-label="Portfolio section"
                 >Portfolio</a
