--- a/Pages/contact-deutsch.html
+++ b/Pages/contact-deutsch.html
@@ -95,10 +95,24 @@
         <h1 data-text="Kathrin Peled">Kathrin Peled</h1>
         <nav>
           <ul>
-            <li>
-              <a href="../index-german.html#about" aria-label="About me">
-                über mich</a
-              >
+            <li class="dropdown">
+              <a href="../index-german.html" aria-label="About">Über mich</a>
+              <ul class="dropdown-portfolio">
+                <li>
+                  <a
+                    href="./resume-german.html"
+                    aria-label="Ineractive Resume Book"
+                    >Mein Lebenslauf</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="./files.html"
+                    aria-label="Download my files and documents"
+                    >Meine Dateien</a
+                  >
+                </li>
+              </ul>
             </li>
             <li class="dropdown">
               <a href="../index-german.html#portfolio" aria-label="Portfolio"
@@ -265,49 +279,6 @@
                           Twitter/ X
                         </b></a
                       >
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="my-files">
-              <div class="container">
-                <div class="h3-title">
-                  <h3>Lade meine Dokumente herunter</h3>
-                </div>
-                <div class="files">
-                  <ul class="files-list">
-                    <li title="Übersetzt ins Deutsche">
-                      <a
-                        href="../Files/Diplom Übersetzung 2023.pdf"
-                        download
-                        aria-label="Download my diploma"
-                      >
-                        <i class="fa-solid fa-download" aria-hidden="true"></i>
-                        Lade mein <strong>Diplom</strong> herunter
-                      </a>
-                    </li>
-                    <li title="Erweiterte Version meines Lebenslaufs">
-                      <a
-                        href="../Files/Kathrin Peled Resume 07.2024 .pdf"
-                        download
-                        aria-label="Download my CV"
-                      >
-                        <i class="fa-solid fa-file" aria-hidden="true"></i>
-
-                        Lade meinen <strong>Lebenslauf</strong> herunter
-                      </a>
-                    </li>
-                    <li title="Lebenslauf mit nur relevanter Erfahrung">
-                      <a
-                        href="../Files/Kathrin Peled Lebenslauf - Deutsch.pdf"
-                        download
-                        aria-label="Download my professional CV"
-                      >
-                        <i class="fa-regular fa-file" aria-hidden="true"></i>
-                        Lade meinen
-                        <strong>beruflichen Lebenslauf</strong> herunter
-                      </a>
                     </li>
                   </ul>
                 </div>
