--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -97,7 +97,25 @@
         <h1 data-text="Kathrin Peled">Kathrin Peled</h1>
         <nav>
           <ul>
-            <li><a href="../index.html#about" aria-label="About">About</a></li>
+            <li class="dropdown">
+              <a href="../index.html#about" aria-label="About">About</a>
+              <ul class="dropdown-portfolio">
+                <li>
+                  <a
+                    href="./resume-english.html"
+                    aria-label="Ineractive Resume Book"
+                    >My Resume</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="./files.html"
+                    aria-label="Download my files and documents"
+                    >Download My Files</a
+                  >
+                </li>
+              </ul>
+            </li>
             <li class="dropdown">
               <a href="../index.html#portfolio" aria-label="Portfolio"
                 >Portfolio</a
@@ -132,7 +150,7 @@
               </ul>
             </li>
             <li>
-              <a href="../index.html#contact" aria-label="Contact">Contact</a>
+              <a href="./contact-english.html" aria-label="Contact">Contact</a>
             </li>
           </ul>
         </nav>
@@ -377,7 +395,7 @@
           </div>
         </div>
       </section>
-    
+
       <section id="2nd-module" aria-labelledby="second-module-heading">
         <div class="container">
           <div class="introdution">
