--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -93,7 +93,25 @@
         <h1 data-text="Kathrin Peled">Kathrin Peled</h1>
         <nav>
           <ul>
-            <li><a href="../index.html#about" aria-label="About">About</a></li>
+            <li class="dropdown">
+              <a href="../index.html#about" aria-label="About">About</a>
+              <ul class="dropdown-portfolio">
+                <li>
+                  <a
+                    href="./resume-english.html"
+                    aria-label="Ineractive Resume Book"
+                    >My Resume</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="./files.html"
+                    aria-label="Download my files and documents"
+                    >Download My Files</a
+                  >
+                </li>
+              </ul>
+            </li>
             <li class="dropdown">
               <a href="../index.html#portfolio" aria-label="Portfolio"
                 >Portfolio</a
@@ -128,7 +146,7 @@
               </ul>
             </li>
             <li>
-              <a href="../index.html#contact" aria-label="Contact">Contact</a>
+              <a href="./contact-english.html" aria-label="Contact">Contact</a>
             </li>
           </ul>
         </nav>
@@ -489,6 +507,18 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="languages">
+        <a href="./resume-german.html" aria-label="Change Language to German">
+          <p>
+            Sprache <br />
+            änderen
+          </p>
+          <img
+            src="../Language Logos/German_Logo.webp"
+            alt="Change Language to German"
+          />
+        </a>
       </div>
     </main>
     <footer>
