--- a/Pages/resume-mobile-english.html
+++ b/Pages/resume-mobile-english.html
@@ -93,7 +93,25 @@
         <h1 data-text="Kathrin Peled">Kathrin Peled</h1>
         <nav>
           <ul>
-            <li><a href="../index.html#about" aria-label="About">About</a></li>
+            <li class="dropdown">
+              <a href="../index.html#about" aria-label="About">About</a>
+              <ul class="dropdown-portfolio">
+                <li>
+                  <a
+                    href="./resume-english.html"
+                    aria-label="Ineractive Resume Book"
+                    >My Resume</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="./files.html"
+                    aria-label="Download my files and documents"
+                    >Download My Files</a
+                  >
+                </li>
+              </ul>
+            </li>
             <li class="dropdown">
               <a href="../index.html#portfolio" aria-label="Portfolio"
                 >Portfolio</a
@@ -128,7 +146,7 @@
               </ul>
             </li>
             <li>
-              <a href="../index.html#contact" aria-label="Contact">Contact</a>
+              <a href="./contact-english.html" aria-label="Contact">Contact</a>
             </li>
           </ul>
         </nav>
@@ -433,7 +451,7 @@
         <!-- page 6 (Contact form) -->
         <div class="book-page">
           <h1 class="title">Contact Me!</h1>
-          <div class="contact-box">
+          <div class="contact-box" id="contact-box">
             <form action="https://formspree.io/f/xyzgryqo" method="POST">
               <input
                 type="text"
@@ -464,6 +482,21 @@
           <!-- closer page 6 -->
         </div>
         <!-- closer book -->
+      </div>
+      <div class="languages">
+        <a
+          href="./resume-mobile-german.html"
+          aria-label="Change Language to German"
+        >
+          <p>
+            Sprache <br />
+            änderen
+          </p>
+          <img
+            src="../Language Logos/German_Logo.webp"
+            alt="Change Language to German"
+          />
+        </a>
       </div>
     </main>
     <footer>
