--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -468,7 +468,7 @@
             </div>
             <!-- page 6 (Contact form) -->
             <div class="page-back">
-              <h1 class="title">Contact Me!</h1>
+              <h1 class="title">✉️ Contact Me</h1>
               <div class="contact-box">
                 <form action="https://formspree.io/f/xyzgryqo" method="POST">
                   <input
