--- a/Pages/resume-mobile-english.html
+++ b/Pages/resume-mobile-english.html
@@ -166,7 +166,6 @@
             />
             <h1>Kathrin Peled</h1>
             <h3>Web Developer</h3>
-            <!-- <h4>front-end Junior</h4> -->
             <div class="social-media">
               <a href="https://t.me/Draculady" target="_blank"
                 ><i class="bx bxl-telegram"></i
@@ -450,7 +449,7 @@
         </div>
         <!-- page 6 (Contact form) -->
         <div class="book-page">
-          <h1 class="title">Contact Me!</h1>
+          <h1 class="title">✉️ Contact Me</h1>
           <div class="contact-box" id="contact-box">
             <form action="https://formspree.io/f/xyzgryqo" method="POST">
               <input
@@ -496,6 +495,12 @@
             src="../Language Logos/German_Logo.webp"
             alt="Change Language to German"
           />
+        </a>
+      </div>
+      <div class="backtotop">
+        <a href="#" aria-label="Back to top">
+          <span class="back-to">Back to</span> top
+          <i class="fa-solid fa-up-long" aria-hidden="true"></i>
         </a>
       </div>
     </main>
