--- a/index-german.html
+++ b/index-german.html
@@ -99,7 +99,7 @@
               <ul class="dropdown-portfolio">
                 <li>
                   <a
-                    href="./resume-english.html"
+                    href="./Pages/resume-german.html"
                     aria-label="Ineractive Resume Book"
                     >Mein Lebenslauf</a
                   >
